--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,10 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -12,23 +16,47 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".SplashScreen"
-            android:noHistory="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        <activity android:name=".MapFragment"></activity>
+        <activity android:name=".OneFragment" />
+        <activity android:name=".MapsActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".TentangActivity" />
-        <activity android:name=".PortalActivity" />
-        <activity android:name=".BerandaActivity" />
+        <activity android:name=".ImageActivity" />
+        <activity android:name=".ImageAdapter" />
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAYmbOhDRWXLw3Oj4XxtC13RSZkMZ9QIw4" />
+
+        <activity android:name=".VideoActivity" />
         <activity
-            android:name=".MainActivity"
+            android:name=".SplashScreen"
+            android:noHistory="true"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         </activity>
+        <activity
+            android:name=".SingleImage"
+            android:label="@string/app_name" />
+        <activity
+            android:name=".TentangActivity"
+            android:label="Tentang APP"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".PortalActivity"
+            android:label="Website Wisata NTT"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".BerandaActivity"
+            android:label="Beranda"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
     </application>
 
 </manifest>
